Bug 249614 - "Pronunciation: Listen to name" does not work
Summary: "Pronunciation: Listen to name" does not work
Status: CLOSED FIXED
Alias: None
Product: KAddressbook Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: LO minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-31 13:27 UTC by Felix Wolfsteller
Modified: 2010-10-22 12:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-08-31 13:27:36 UTC
When creating a new Contact and opening the "More" flap there is the point "Pronunciation" ("Listen to Name") at the very bottom.

Contrasting other items, it is written in very small blue, underlined letters.
Touching the string (it resembles a link on an internet page, at least) does not lead to any observeable behaviour.

Found in version 4:4.5~20100827.1168757-1maemo1.1169941 .
Comment 1 Volker Krause 2010-10-15 15:45:07 UTC
SVN commit 1186232 by vkrause:

Hide the pronunciation label when there is no sound set.

BUG: 249614


 M  +6 -1      editormore.cpp  
 M  +2 -6      editormore_namepage.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186232
Comment 2 Felix Wolfsteller 2010-10-22 12:33:24 UTC
Confirmed, hidden in 4:4.6~20101022.1188351-1maemo1.1187374 .