Hide the pronunciation label when there is no sound set.

BUG: 249614

svn path=/trunk/KDE/kdepim/mobile/; revision=1186232